# descentinel

./: .gitmodules  README.md  shell.nix
.github/workflows/: main.yml
app/: .gitignore  Cargo.toml  Cross.toml  README.md  build.sh  build_services.sh  create_pod.sh  deploy_on_pi.sh  run_descentinel_backend.sh  run_on_pi.sh  setup_auto_services_on_pi.sh  setup_frontend.sh
app/assets/: Cargo.toml  overlord_cards.json
app/assets/ol_cards/: aim.json  alarm.json  all_concealing_shadows.json  ambush.json  animate_weapons.json  bane_spiders_nest.json  bane_spiders_swarm.json  beastman_war_party.json  black_order.json  blood_ape_tribe.json  brilliant_commander.json
app/assets/src/: cards.rs
app/broadcast/: Cargo.toml  Containerfile  Containerfile.aarch64  README.md  build.sh
app/broadcast/src/: main.rs
app/descentinel-types/: Cargo.toml
app/descentinel-types/src/: cards.rs  ipc.rs  lib.rs
app/detect_card/: .gitignore  Cargo.toml  Containerfile  Containerfile.pi  Cross.toml  README.md  action.yml  build.sh  detect_card.py  docker-compose.yml  keywords_cards.json  overlord_card_match.py  overlord_cards.csv  recognize_card.py  requirements.txt  send_an_image_to_rabbitmq.py  serve_detect_card.py  serve_detect_cards.py
app/detect_card/service_test/: Containerfile  send_an_image_to_rabbitmq.py
app/detect_card/src/: lib.rs  main.rs
app/detect_card/tests/: test_detect_card.py
app/identify_game_scene/: Cargo.toml  Containerfile  Containerfile.build.for.pi  Containerfile.cross_builder  Containerfile.pi  README.md  build.sh
app/identify_game_scene/service_test/: send_an_image_to_rabbitmq.py
app/identify_game_scene/src/: lib.rs  main.rs
app/monitor/: Cargo.toml  Containerfile  Containerfile.aarch64  Cross.toml  README.md  build.sh
app/monitor/src/: main.rs
app/presentation/: Cargo.toml
app/presentation/src/: main.rs
app/services/: broadcast  broadcast.pi  detect_card
app/services/quadlets/: broadcast.container  descentinel.pod  detect_card.container  rabbitmq.container
app/services/systemd/: descentinel-monitor.service
app/view/: .gitignore  Containerfile  package.json  pnpm-lock.yaml  tsconfig.json
app/view/src/: App.tsx  game_room.tsx  latest_game_room_image.tsx  latest_overlord_card.tsx  overlord_card.tsx  test_image
app/view/src/components/: overlord_card.tsx
dash/: README.md
dash/pico-dash-menu/: .gitignore  CMakeLists.txt  README.md  action_state_machine.h  draw_image_on_tft.c  enums.h  hero.h  ina219.h  screens.h
dash/pico-dash-menu/images/: Action_1_Header_image_data.h  Action_1_Navi_image_data.h  Action_2_Header_image_data.h  Action_2_Navi_image_data.h  Action_3_Header_image_data.h  Action_3_Navi_image_data.h  Action_4_Header_image_data.h  Action_4_Navi_image_data.h  Action_Advance_with_value_image_data.h  Action_Fight_with_value_image_data.h  Action_Header_image_data.h  Action_Run_with_value_image_data.h  Action_advance_50px_image_data.h  Action_fight_50px_image_data.h  Coin_100_with_value_image_data.h  Coin_2500_with_value_image_data.h  Coin_25_with_value_image_data.h  Coin_500_with_value_image_data.h  Coin_Big_Header_image_data.h  Coin_Big_Navi_image_data.h  Coin_Small_Header_image_data.h  Coin_Small_Navi_image_data.h  Command_Aim_with_back_image_data.h  Command_Aim_with_value_image_data.h  Command_Evade_with_back_image_data.h  Command_Evade_with_value_image_data.h  Command_Guard_with_back_image_data.h  Command_Guard_with_value_image_data.h  Command_Prolonged_with_back_image_data.h  Command_Prolonged_with_value_image_data.h  Command_Rest_with_back_image_data.h  Command_Rest_with_value_image_data.h  Health_Header_image_data.h  Health_Navi_image_data.h  Heart_with_value_image_data.h  Menu_Leben_image_data.h  Potion_1_Header_image_data.h  Potion_1_Navi_image_data.h  Potion_2_Header_image_data.h  Potion_2_Navi_image_data.h  (+47 more)
dash/pico-dash-menu/libs/: driver_ina219_basic.h  st7735
dash/prototyping/: .gitignore
dash/prototyping/design/: menu.kra  menu_with_masks.kra  pico-dash.fzz
dash/prototyping/simulate_menus/: Header.kra  Icon_Center_With_Value.kra  Icon_Left_with_value.kra  Icon_Right_with_value.kra  Navi.kra  convert_image_for_tft.py  simulate_screen.py
utils/qrcodes/: generate_a4_qr_codes.py
