[package]
name = "broadcast"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
descentinel-types = { path = "../descentinel-types" }
env_logger.workspace = true
lapin.workspace = true
log.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["macros", "time", "rt-multi-thread"] }
tokio-executor-trait = "2"
warp = "0.3"
