[package]
name = "broadcast"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
descentinel-types = { path = "../descentinel-types" }
env_logger.workspace = true
futures-util = "0.3.31"
lapin.workspace = true
log.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-executor-trait = "3"
warp = { version = "0.4", features = ["server"] }
