[package]
name = "descentinel-types"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
futures = { version = "0.3", default-features = true }
lapin.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
tokio = { version = "1", features = ["macros", "time", "rt-multi-thread"] }
