[package]
name = "detect_card"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-global-executor = "2"
clap = { workspace = true, features = ["derive"] }
env_logger.workspace = true
futures = { version = "0.3", default-features = true }
lapin.workspace = true
log.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tesseract = { version="^0.15", default-features = false}
tokio = { version = "1", features = ["macros", "time", "rt-multi-thread"] }

[dev-dependencies]
image = "0.24"
