[package]
name = "identify_game_scene"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
env_logger.workspace = true
futures = { version = "0.3", default-features = true }
lapin.workspace = true
log.workspace = true
opencv = { version="0.93", features = ["clang-runtime"]}
tokio = { version = "1", features = ["macros", "time", "rt-multi-thread"] }
rustix = "0.38"
