[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
async-global-executor = "2.3.1"
clap = { version = "4.1.6", features = ["derive"] }
env_logger = "0.10.0"
image = "0.24.5"
lapin = "2.1.1"
log = "0.4.17"
nokhwa = { version = "0.10.3", features = ["input-native"] }


[package.metadata.cross.target.aarch64-unknown-linux-gnu]
image = "ghcr.io/cross-rs/aarch64-unknown-linux-gnu:main"
pre-build = [
    "dpkg --add-architecture arm64 ",
    "apt-get update ",
    "apt-get install --assume-yes libc6-dev:arm64",
]