[package]
name = "presentation"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
base64 = "0.22.1"
futures = "0.3.31"
gloo-net = "0.6.0"
image.workspace = true
leptos = { version = "0.7.2", features = ["csr"] }
send_wrapper = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
