[package]
name = "presentation"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
assets = { path = "../assets" }
base64 = "0.22.1"
futures = "0.3.31"
gloo-net = "0.6.0"
image.workspace = true
leptos = { version = "0.7.2", features = ["csr"] }
send_wrapper = "0.6.0"
serde.workspace = true
serde_json.workspace = true

[features]
production = []
